name:                language-swift-quote
version:             0.1.0.0
synopsis:            QuasiQuotation support for Swift in Template Haskell
description:         QuasiQuotation support for Swift in Template Haskell
license:             BSD3
license-file:        LICENSE
author:              Manuel M T Chakravarty, Maxwell Swadling
maintainer:          maxwellswadling@gmail.com
copyright:           (c) 2014, Manuel M T Chakravarty
                     (c) 2014, Maxwell Swadling
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Language.Swift.Quote,
                       Language.Swift.Quote.Parser,
                       Language.Swift.Quote.Pretty,
                       Language.Swift.Quote.Syntax
  build-depends:       base >=4.7 && <4.8,
                       parsec == 3.1.*,
                       mainland-pretty == 0.2.*,
                       text == 1.1.*
  default-language:    Haskell2010
